--- a/site-hairdresser/index.html
+++ b/site-hairdresser/index.html
@@ -3,13 +3,13 @@
   <head>
     <!-- PAGE INFO -->
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
     <link
       href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@400;500;700&family=Poppins:wght@400;500;700&display=swap"
       rel="stylesheet"
-    />
+    >
     <link rel="stylesheet" href="../site-hairdresser/reset.css">
     <link rel="stylesheet" href="../site-hairdresser/style.css">
     <link rel="stylesheet" href="../site-hairdresser/variable.css">
